--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 #spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.defer-datasource-initialization=true
+
+#jdbc:mysql://127.0.0.1:3306/?user=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/yselldb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
