--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 logging.level.org.springframework = info
 #This is not really needed as this is the default after 2.0.0.RELEASE
 spring.jackson.serialization.write-dates-as-timestamps=false
@@ -10,12 +12,3 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 #spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.defer-datasource-initialization=true
-
-#jdbc:mysql://127.0.0.1:3306/?user=root
-#spring.datasource.url=jdbc:mysql://localhost:3306/yselldb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
