DB connection correction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=heroku_dev
 
 logging.level.org.springframework = info
 #This is not really needed as this is the default after 2.0.0.RELEASE
