--- a/src/main/resources/application-heroku_dev.properties
+++ b/src/main/resources/application-heroku_dev.properties
@@ -1,32 +1,18 @@
 server.url=http://localhost:${server.port}
 server.port=8080
 
-#mysql://b7be70619b61fd:62a7faf2@eu-cdbr-west-01.cleardb.com/heroku_7c698a5bfaa8eb8?reconnect=true
-#mysql://
-#username
-# b7be70619b61fd
-# :
-#password
-# 62a7faf2
-# @
-#url
-# eu-cdbr-west-01.cleardb.com
-# /
-# dbname
-# heroku_7c698a5bfaa8eb8
-# ?reconnect=true
-
 spring.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com:3306/heroku_7c698a5bfaa8eb8?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=b7be70619b61fd
 spring.datasource.password=62a7faf2
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 spring.liquibase.enabled=true
 spring.liquibase.changelog=classpath:db/db.changelog-master.xml
 
 spring.liquibase.contexts=mysql
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
