error correction added

--- a/src/main/resources/application-heroku_dev.properties
+++ b/src/main/resources/application-heroku_dev.properties
@@ -6,7 +6,7 @@ spring.datasource.username=b7be70619b61fd
 spring.datasource.password=62a7faf2
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 spring.liquibase.enabled=true
